Fix appendix clipped

--- a/client/src/app/site/pages/meetings/modules/list-of-speakers-content/components/list-of-speakers-entry/list-of-speakers-entry.component.scss
+++ b/client/src/app/site/pages/meetings/modules/list-of-speakers-content/components/list-of-speakers-entry/list-of-speakers-entry.component.scss
@@ -54,12 +54,17 @@
 
     .countdown {
         font-size: 18px;
-        margin-right: 6px;
+        line-height: 18px;
+        vertical-align: middle;
     }
 }
 
 .speaker-warning {
     margin-right: 5px;
+}
+
+.speaker-appendix {
+    white-space: nowrap;
 }
 
 .speaker-control-button {
